[BUGFIX] Now finally the tags are aligned

--- a/Resources/Private/Sass/frontend/_session.scss
+++ b/Resources/Private/Sass/frontend/_session.scss
@@ -8,12 +8,12 @@ $session-sessioninfo-border-radius: 2px;
 $session-sessioninfo-padding: 1.5rem;
 $session-sessioninfo-shadow: 0 2px 1px rgba(0,0,0,.15);
 
-
 //
 // Box
 //
-.sessionplaner-sessionbox-tags {
-    margin-top: .5rem;
+.sessionplaner-sessionbox {
+    display: flex;
+    flex-direction: column;
 }
 .sessionplaner-sessionbox-info {
     > * + *:before {
@@ -21,7 +21,10 @@ $session-sessioninfo-shadow: 0 2px 1px rgba(0,0,0,.15);
         opacity: .25;
     }
 }
-
+.sessionplaner-sessionbox-tags {
+    margin-top: auto;
+    padding-top: .5rem;
+}
 
 //
 // Info
